// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly when 'feedback_requests' is passed as prop  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-12qqhfb-MuiPaper-root-MuiCard-root"
  style={
    {
      "marginTop": "1.7rem",
    }
  }
  width={100}
>
  <div
    className="MuiCardContent-root makeStyles-noTopBottomPadding-1 css-46bh2p-MuiCardContent-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          className="MuiGrid-root MuiGrid-container css-1k7lq2g-MuiGrid-root"
        >
          <div
            className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-wkdwxb-MuiSkeleton-root"
              style={
                {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true makeStyles-flexShrink-3 css-1vd824g-MuiGrid-root"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse makeStyles-smallMargin-2 css-1e1x4vv-MuiSkeleton-root"
              style={
                {
                  "height": 30,
                  "width": "10vw",
                }
              }
            />
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse makeStyles-smallMargin-2 css-1e1x4vv-MuiSkeleton-root"
              style={
                {
                  "height": 30,
                  "width": "15vw",
                }
              }
            />
          </div>
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
          >
            <div
              className="makeStyles-flexShrink-3 MuiBox-root css-1bvc4cc"
            >
              <div
                className="MuiBox-root css-qfdd9t"
              >
                <span
                  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kghlb5-MuiSkeleton-root"
                  style={
                    {
                      "height": 30,
                      "width": "10vw",
                    }
                  }
                />
                <span
                  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-kghlb5-MuiSkeleton-root"
                  style={
                    {
                      "height": 30,
                      "width": "15vw",
                    }
                  }
                />
                <span
                  className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-u9lods-MuiSkeleton-root"
                  style={
                    {
                      "height": "2vh",
                      "width": "2vh",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when 'feedback_requests' is passed as prop  2`] = `
<div
  className="MuiBox-root css-1lads1q"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
    style={
      {
        "height": "2.7rem",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`renders correctly when 'feedback_requests' is passed as prop  3`] = `
<div
  className="MuiBox-root css-1lads1q"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
    style={
      {
        "height": "2.7rem",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`renders correctly when 'feedback_requests' is passed as prop  4`] = `
<div
  className="MuiBox-root css-0"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse makeStyles-smallMargin-2 css-1e1x4vv-MuiSkeleton-root"
    style={
      {
        "height": 40,
        "marginBottom": "1em",
        "width": "50vw",
      }
    }
  />
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-12qqhfb-MuiPaper-root-MuiCard-root"
    width={100}
  >
    <div
      className="MuiCardContent-root makeStyles-noTopBottomPadding-1 css-46bh2p-MuiCardContent-root"
    >
      <div
        className="MuiBox-root css-1lads1q"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
          style={
            {
              "height": "8vh",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when 'guild' is passed as prop  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card css-12qqhfb-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": 50,
              "width": undefined,
            }
          }
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="MuiBox-root css-4ntozg"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": undefined,
        }
      }
    />
    <div
      className="MuiBox-root css-1xzsyzi"
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": undefined,
        }
      }
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": 180,
        }
      }
    />
  </div>
</div>
`;

exports[`renders correctly when 'people' is passed as prop  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card css-12qqhfb-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-avatar css-1ssile9-MuiCardHeader-avatar"
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-wkdwxb-MuiSkeleton-root"
        style={
          {
            "height": 45,
            "width": 45,
          }
        }
      />
    </div>
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiTypography-body2 MuiCardHeader-title css-et1ao3-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": 43,
              "width": undefined,
            }
          }
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body2 MuiCardHeader-subheader css-83ijpv-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
    style={
      {
        "height": 118,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`renders correctly when 'team' is passed as prop  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card css-12qqhfb-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": 50,
              "width": undefined,
            }
          }
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="MuiBox-root css-4ntozg"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": undefined,
        }
      }
    />
    <div
      className="MuiBox-root css-1xzsyzi"
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": undefined,
        }
      }
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": 15,
          "width": 180,
        }
      }
    />
  </div>
</div>
`;
